// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge bg blue sets background-color and color 1`] = `
<div
  className="hsCBhN"
/>
`;

exports[`Badge bg green sets background-color and color 1`] = `
<div
  className="ksxFdl"
/>
`;

exports[`Badge bg lightBlue sets background-color and color 1`] = `
<div
  className="lmOBdv"
/>
`;

exports[`Badge bg lightGreen sets background-color and color 1`] = `
<div
  className="cmSLSv"
/>
`;

exports[`Badge bg lightOrange sets background-color and color 1`] = `
<div
  className="bJjDyx"
/>
`;

exports[`Badge bg lightRed sets background-color and color 1`] = `
<div
  className="edPrvc"
/>
`;

exports[`Badge bg orange sets background-color and color 1`] = `
<div
  className="bXMuhB"
/>
`;

exports[`Badge bg red sets background-color and color 1`] = `
<div
  className="WBDih"
/>
`;

exports[`Badge can escape preset: bg lightBlue sets background-color and color text sets color 1`] = `
<div
  className="VjDUj"
  color="text"
/>
`;

exports[`Badge non-preset: bg text sets background-color and color white sets color 1`] = `
<div
  className="dvFkcF"
  color="white"
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  border-radius: 99999px;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #f6f8fa;
  color: #001833;
}

<div
  className="c0"
/>
`;
